--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<h1 class="first-title">
 			Making things look great
 			<br>
-			<span> for companies who make great stuff!</span>
+			<span> for companies who make great stuff</span>
 		</h1>
 		<a href="#" class="button button-accent">See Our Work</a>
 		<p>&nbsp</p>
