nicer:   index.html 	with:   styles.css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		section{display:block;}
 		
-		.home-hero{
+		.home-home{
 			background:url(imgs/backgr-1.jpg) #D6AD97 no-repeat center;
 			background-size: 99.9%;
 
@@ -21,7 +21,7 @@
 		}
 		
 		@media(max-width:60rem){ /*when screen smaller than 60rem*/
-			.home-hero{
+			.home-home{
 				background:url(imgs/portfolio-8.jpg) #D6AD97 no-repeat center center;
 				background-size: cover;
 			}
@@ -35,18 +35,18 @@
 		<img src="imgs/logo.jpg" alt="super logo" class="logo"/>
 		<nav>
 			<ul>
-				<li><a href="#">HOME</a></li>
-				<li><a href="#">ABOUT</a></li>
-				<li><a href="#">CONTACT</a></li>
+				<li class="skew"><a href="#">HOME</a></li>
+				<li class="skew"><a href="#">AcanedioUT</a></li>
+				<li class="skew"><a href="#">CONTACT</a></li>
 			</ul>
 		</nav>
 	</header>
 
-	<section class="home-hero">
+	<section class="home-home">
 		<h1 class="first-title">
-			Making things look great
+			MAKING GREAT THINGS
 			<br>
-			<span> for companies who make great stuff</span>
+			<span>AND LIVE A GREAT LIFE</span>
 		</h1>
 		<a href="#" class="button button-accent">See Our Work</a>
 		<p>&nbsp</p>
@@ -64,9 +64,9 @@ Lorem ipsum dolor sit amet consectetur adipiscing elit metus leo penatibus, nec 
 			</p>
 		</div>
 	</section>
-
+		
 		<h2>Some of our work</h2>
-
+		<hr>
 	<section class="portfolio">
 
 		<figure class="port-item">
