nicer:   index.html 	with:   styles.css

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<nav>
 			<ul>
 				<li class="skew"><a href="#">HOME</a></li>
-				<li class="skew"><a href="#">AcanedioUT</a></li>
+				<li class="skew"><a href="#">ABOUT</a></li>
 				<li class="skew"><a href="#">CONTACT</a></li>
 			</ul>
 		</nav>
@@ -45,8 +45,6 @@
 	<section class="home-home">
 		<h1 class="first-title">
 			MAKING GREAT THINGS
-			<br>
-			<span>AND LIVE A GREAT LIFE</span>
 		</h1>
 		<a href="#" class="button button-accent">See Our Work</a>
 		<p>&nbsp</p>
