--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@ Lorem ipsum dolor sit amet consectetur adipiscing elit metus leo penatibus, nec 
 			</p>
 		</div>
 	</section>
-		
-		<h2>Some of our work</h2>
-		<hr>
+		<h2>OUR BEST DESTINATIONS</h2>
+		<br>
 	<section class="portfolio">
 
 		<figure class="port-item">
