--- a/index.html
+++ b/index.html
@@ -62,8 +62,14 @@ Lorem ipsum dolor sit amet consectetur adipiscing elit metus leo penatibus, nec 
 			</p>
 		</div>
 	</section>
-		<h2>OUR BEST DESTINATIONS</h2>
-		<br>
+	
+	<h2 class="destinations">
+		<span id="o1">OUR</span>
+		<span id="t2"> BEST</span>
+		<span id="t3">DESTINATIONS</span>
+	</h2>
+	
+	<br>
 	<section class="portfolio">
 
 		<figure class="port-item">
