--- a/index.html
+++ b/index.html
@@ -129,19 +129,16 @@ Lorem ipsum dolor sit amet consectetur adipiscing elit metus leo penatibus, nec 
 	</section>
 
 	<footer>
-		<p>Tellus sem imperdiet etiam consequat lobortis id massa interdum, scelerisque magna purus ut pharetra tempus nascetur, eleifend venenatis nu.</p>
+		<p><span>Tellus</span> sem imperdiet etiam consequat lobortis id massa interdum, scelerisque magna purus ut pharetra tempus nascetur, eleifend venenatis nu.</p>
 		
 		<section class="list">
 		<ul class="first">
-			<li><strong>footer idea.</strong></li>
-			<li><strong>footer idea.</strong></li>
-			<li><strong>footer idea.</strong></li>
+			<li><strong><span>footer idea.</span></strong></li>
 			<li><strong>footer idea.</strong></li>
 			<li><strong>footer idea.</strong></li>
 			<li><strong>footer idea.</strong></li>
 		</ul>
 		<ul>
-			<li><strong>footer idea.</strong></li>
 			<li><strong>footer idea.</strong></li>
 			<li><strong>footer idea.</strong></li>
 			<li><strong>footer idea.</strong></li>
@@ -153,8 +150,7 @@ Lorem ipsum dolor sit amet consectetur adipiscing elit metus leo penatibus, nec 
 			<li><strong>footer idea.</strong></li>
 			<li><strong>footer idea.</strong></li>
 			<li><strong>footer idea.</strong></li>
-			<li><strong>footer idea.</strong></li>
-			<li><strong>footer idea.</strong></li>
+
 		</ul>
 		</section>
 
