--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>newSite</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
 	
+	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Bowlby+One+SC" />
+
 	<style type="text/css">
 
 		section{display:block;}
@@ -26,6 +28,9 @@
 				background-size: cover;
 			}
 		}
+		h1.first-title{
+			font-family: Bowlby One SC !important;
+		}
 
 	</style>
 </head>
@@ -43,8 +48,8 @@
 	</header>
 
 	<section class="home-home">
-		<h1 class="first-title">
-			MAKING GREAT THINGS
+		<h1 class="first-title" style="font-family: Bowlby One SC">
+			Feeling Grate Everywhere
 		</h1>
 		<a href="#" class="button button-accent">See Our Work</a>
 		<p>&nbsp</p>
