--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 	<title>newSite</title>
 	
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Bowlby+One+SC" />
+	
+	<link href='https://fonts.googleapis.com/css?family=Bowlby One SC' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Caveat Brush' rel='stylesheet'>
+	<link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet"> 
 
 	<style type="text/css">
 
@@ -29,7 +32,7 @@
 			}
 		}
 		h1.first-title{
-			font-family: Bowlby One SC !important;
+			font-family: 'Caveat Brush', cursive !important;
 		}
 
 	</style>
