button is bigger

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 	<section class="home-home">
 		<h1 class="first-title" style="font-family: Bowlby One SC">
-			Feeling Grate Everywhere
+			FEELING GRATE EVERYWHERE
 		</h1>
 		<a href="#" class="button button-accent">See Our Work</a>
 		<p>&nbsp</p>
