completely cross-screen

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 		<div class="home-about-textbox">
 			<h2>Who we are</h2>
 			<p>
-Lorem ipsum dolor sit amet consectetur adipiscing elit metus leo penatibus, nec vehicula fames urna egestas potenti velit phasellus scelerisque id, laoreet fusce lacinia natoque tristique congue 
+Lot consectetur adipiscing elit metus leo penatibus, nec vehicula fames urna egestas potenti velit phasellus scelerisque id, laoreet fusc
 			</p>
 			<p>
-<strong>Fringilla primis curae</strong>. Tellus sem imperdiet etiam consequat lobortis id massa interdum, scelerisque magna purus ut pharetra tempus nascetur, eleifend venenatis nullam risus lacus inceptos cras
+<strong>Fringilla primis curae</strong>. Teortis id massa interdum, scelerisque magna purus ut pharetra tempus nascetur, eleifend venenatis nullam risus lacus inceptos cras
 			</p>
 		</div>
 	</section>
@@ -83,7 +83,7 @@ Lorem ipsum dolor sit amet consectetur adipiscing elit metus leo penatibus, nec 
 		<figure class="port-item">
 		 <img src="imgs/portfolio-1.jpg" alt="portfolio item">	
 		 <figcaption class="port-description">
-			<p>Project title</p> 
+			<p>Fresh Air</p> 
 			<a href="#" class="button button-accent button-small">project details</a>	
 		 </figcaption>
 		</figure>
@@ -91,7 +91,7 @@ Lorem ipsum dolor sit amet consectetur adipiscing elit metus leo penatibus, nec 
 		<figure class="port-item">
 		 <img src="imgs/portfolio-2.jpg" alt="portfolio item">	
 		 <figcaption class="port-description">
-			<p>Project title</p> 
+			<p>Touch the freedom</p> 
 			<a href="#" class="button button-accent button-small">project details</a>	
 		 </figcaption>
 		</figure>
@@ -99,7 +99,7 @@ Lorem ipsum dolor sit amet consectetur adipiscing elit metus leo penatibus, nec 
 		<figure class="port-item">
 		 <img src="imgs/portfolio-3.jpg" alt="portfolio item">	
 		 <figcaption class="port-description">
-			<p>Project title</p> 
+			<p>Healty entertainments</p> 
 			<a href="#" class="button button-accent button-small">project details</a>	
 		 </figcaption>
 		</figure>
@@ -107,7 +107,7 @@ Lorem ipsum dolor sit amet consectetur adipiscing elit metus leo penatibus, nec 
 		<figure class="port-item">
 		 <img src="imgs/portfolio-4.jpg" alt="portfolio item">	
 		 <figcaption class="port-description">
-			<p>Project title</p> 
+			<p>Beautiful nature</p> 
 			<a href="#" class="button button-accent button-small">project details</a>	
 		 </figcaption>
 		</figure>
@@ -115,7 +115,7 @@ Lorem ipsum dolor sit amet consectetur adipiscing elit metus leo penatibus, nec 
 		<figure class="port-item">
 		 <img src="imgs/portfolio-5.jpg" alt="portfolio item">	
 		 <figcaption class="port-description">
-			<p>Project title</p> 
+			<p>Hear the silence</p> 
 			<a href="#" class="button button-accent button-small">project details</a>	
 		 </figcaption>
 		</figure>
@@ -123,7 +123,7 @@ Lorem ipsum dolor sit amet consectetur adipiscing elit metus leo penatibus, nec 
 		<figure class="port-item">
 		 <img src="imgs/portfolio-6.jpg" alt="portfolio item">	
 		 <figcaption class="port-description">
-			<p>Project title</p> 
+			<p>Enjoy your rest</p> 
 			<a href="#" class="button button-accent button-small">project details</a>	
 		 </figcaption>
 		</figure>
