--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	
 	<link href='https://fonts.googleapis.com/css?family=Bowlby One SC' rel='stylesheet'>
-	<link href='https://fonts.googleapis.com/css?family=Caveat Brush' rel='stylesheet'>
+
 	<link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet"> 
 
 	<style type="text/css">
@@ -37,7 +37,7 @@
 		font-family: 'Caveat Brush', cursive !important;
 	}
 	#anim{
-		animation: animfade 2s linear forwards, comeDown .5s ease-out forwards;
+		animation: animfade 2s linear forwards, comeDown 1.5s ease-out forwards;
 	}
 	
 	@keyframes animfade {
