--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	
 	<link href='https://fonts.googleapis.com/css?family=Bowlby One SC' rel='stylesheet'>
-
+	<link href='https://fonts.googleapis.com/css?family=Caveat Brush' rel='stylesheet'>
 	<link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet"> 
 
 	<style type="text/css">
@@ -45,8 +45,10 @@
 		100%{opacity:1;}
 	}
 	@keyframes comeDown {
-		0%{transform: translateY(-100%)}
-		100%{transform: translateY(0)}
+		0%{transform: translateY(-100%);
+			-webkit- transform: translateY(-100%)}
+		100%{transform: translateY(0);
+			-webkit- transform: translateY(-100%)}
 	}
 
 	</style>
