--- a/index.html
+++ b/index.html
@@ -13,43 +13,6 @@
 
 	<style type="text/css">
 
-	section{display:block;}
-
-	.home-home{
-		background:url(imgs/backgr-1.jpg) #D6AD97 no-repeat center;
-		background-size: 100%;
-
-	}
-	.home-about{
-		background:url(imgs/portfolio-8.jpg) #D6AD97 no-repeat center center;
-		background-size: 100%;
-		opacity:0;
-		animation:animfade 1.5s ease-in 1s forwards ;
-	}
-
-	@media(max-width:60rem){ /*when screen smaller than 60rem*/
-		.home-home{
-			background:url(imgs/portfolio-8.jpg) #D6AD97 no-repeat center center;
-			background-size: cover;
-		}
-	}
-	h1.first-title{
-		font-family: 'Caveat Brush', cursive !important;
-	}
-	#anim{
-		animation: animfade 2s linear forwards, comeDown 1.5s ease-out forwards;
-	}
-	
-	@keyframes animfade {
-		0%{opacity:0;}
-		100%{opacity:1;}
-	}
-	@keyframes comeDown {
-		0%{transform: translateY(-100%);
-			-webkit- transform: translateY(-100%)}
-		100%{transform: translateY(0);
-			-webkit- transform: translateY(-100%)}
-	}
 
 	</style>
 
@@ -152,37 +115,31 @@ Lot consectetur adipiscing elit metus leo penatibus, nec vehicula fames urna ege
 	</section>
 
 	<section class="pre-footer">
-		<h3>like what you see?</h3>
-		<h4>then what are you waiting for?</h4>
+		<h3>If you like that</h3>
+		<h4>Get your personal plan from our experts!</h4>
 		<a href="#" class="button-prefooter">Further</a>
 	</section>
 
 	<footer>
-		<p><span>Tellus</span> sem imperdiet etiam consequat lobortis id massa interdum, scelerisque magna purus ut pharetra tempus nascetur, eleifend venenatis nu.</p>
+		<p class="description">Webpage designed from <span>Massimo Ganzerli</span>, &copy; 2018. For more information requests and questions just contact me at: massimoganzerli90@gmail.com</p>
 		
 		<section class="list">
-		<ul class="first">
-			<li><strong><span>footer idea.</span></strong></li>
-			<li><strong>footer idea.</strong></li>
-			<li><strong>footer idea.</strong></li>
-			<li><strong>footer idea.</strong></li>
+		<ul id="footerLogo">
+			<li><img src="imgs/logo.jpg"></li>
 		</ul>
-		<ul>
-			<li><strong>footer idea.</strong></li>
-			<li><strong>footer idea.</strong></li>
-			<li><strong>footer idea.</strong></li>
-			<li><strong>footer idea.</strong></li>
-			<li><strong>footer idea.</strong></li>
+		<ul class="first">
+			<li><strong><span>RELATED</span></strong></li>
+			<li><strong><a href="#">Outdoor Shop</a></strong></li>
+			<li><strong><a href="#">Travelling Ensurance</a></strong></li>
+			<li><strong><a href="#">Other..</a></strong></li>
 		</ul>
 		<ul class="last">
-			<li><strong>footer idea.</strong></li>
-			<li><strong>footer idea.</strong></li>
-			<li><strong>footer idea.</strong></li>
-			<li><strong>footer idea.</strong></li>
-
+			<li><strong><span>MORE</span></strong></li>
+			<li><strong><a href="#">Nature</a></strong></li>
+			<li><strong><a href="#">Places</a></strong></li>
+			<li><strong><a href="#">Other.</a></strong></li>
 		</ul>
 		</section>
-
 	</footer>
 
 </body>
