prepare for deploy

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 		</nav>
 	</header>
 
-	<section class="home-home">
+	<section class="home-home" id="start">
 		<h1 class="first-title" style="font-family: Bowlby One SC">
 			FEELING GRATE EVERYWHERE
 		</h1>
-		<a href="#" class="button button-accent">See Our Work</a>
+		<a href="#destinations" class="button button-accent">See Our Work</a>
 		<p>&nbsp</p>
 
 	</section>
@@ -55,7 +55,7 @@ Lot consectetur adipiscing elit metus leo penatibus, nec vehicula fames urna ege
 </div>
 
 
-	<h2 class="destinations">
+	<h2 class="destinations" id="destinations">
 		<span id="o1">OUR</span>
 		<span id="t2"> BEST</span>
 		<span id="t3">DESTINATIONS</span>
@@ -115,9 +115,9 @@ Lot consectetur adipiscing elit metus leo penatibus, nec vehicula fames urna ege
 	</section>
 
 	<section class="pre-footer">
-		<h3>If you like that</h3>
+		<h3>If you like our offers</h3>
 		<h4>Get your personal plan from our experts!</h4>
-		<a href="#" class="button-prefooter">Further</a>
+		<a href="#start" class="button-prefooter"> Indepth </a>
 	</section>
 
 	<footer>
